--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,223 @@
-.index-title {
-  font-size: 100px;
+*,*:before,*:after{
+  box-sizing:border-box;
+}
+body{
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+}
+img{
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+.container{
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 0 12px;
+}
+.d-flex{
+  display: flex;
+}
+.d-block{
+  display: block;
+}
+
+.section-title{
+  font-size: $font-xxl;
+  font-weight: 600;
+  text-align: center;
+}
+.banner{
+  background:url(/assets/images/home-header.png) no-repeat center;
+  background-size: cover;
+  .banner-inner{
+    height: calc(100vh - 80px);
+    color: $secondary;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    h2{
+      font-size: $font-xl;
+    }
+    P{
+      font-size: $font-xxxl;
+      font-weight: 800;
+    }
+    a{
+      font-size: $font-m;
+      width: 104px;
+      padding: 6px 12px;
+      color: #fff;
+      background: $primary;
+    }
+    a:hover{
+      color: #FBF2F2;
+    }
+  }
+}
+.professional{ 
+  background: $complementary;
+  padding: 80px 0;
+  
+  h2{
+    color: $secondary;    
+  }
+  
+  ul{
+    justify-content: space-between;   
+    text-align: center;
+    margin-top: 32px;
+    margin-left: -12px;
+    margin-right: -12px;
+
+    li{
+      width: 25%;
+      padding: 0 12px;
+
+      img{
+        width: 83px;
+        margin-bottom: 24px;     
+        
+      }
+      h2{
+        font-size: $font-l;
+      }
+      p{
+        color: #000;
+        text-align: left;
+      }
+    }
+  }
+}
+
+.classic{
+  padding: 80px 0;
+  h2{
+    color: $secondary;
+  }
+  ul{
+    justify-content: space-between;
+    text-align: center;
+    margin-right: -12px;
+    margin-left: -12px;
+    li{
+      width: 33%;
+      padding: 0 12px;
+      h3{
+        font-size: $font-xxl;
+        font-weight: 800;
+        font-style: italic;
+        color: $primary;
+      }
+    }
+  }
+  
+}
+
+.joint-design{
+  background: url(/assets/images/index-bg.png) no-repeat center;
+  background-size: cover;
+  padding: 80px 0;
+  h2{
+    color: #fff;
+  }
+  ul{
+    text-align: center;
+    li{
+      width: 50%;
+      margin-top: 48px;
+      h3{
+        font-size: $font-xxl;
+        font-weight: 800;
+        font-style: italic;
+        color: $primary;
+        background: #fff;
+      }
+    }
+
+  }
+    
+}
+.recommend{
+  padding: 80px 0;
+  h2{
+    color: $secondary;
+  }
+  ul{
+    margin-right: -12px;
+    margin-left: -12px;
+    .recommend-inner{
+      width: 25%;
+      padding: 0 12px;
+      margin-top: 48px;
+      
+      li{
+        border: 1px solid #DEE2E6;
+        border-radius: 4px;
+        box-shadow: 0px 2px 6px #00000029;
+        .info{
+          padding: 16px;
+          h4{
+            font-weight: 600;
+          }
+          .date{
+            font-size: $font-s;
+            color: #707070;
+            margin-top: 72px;
+          }
+        }
+      }
+    }
+  }
+}
+.contact{
+  padding: 80px 0;
+  background: $complementary;
+  .contact-inner{
+    h2{
+      color: $secondary;
+    }
+    form{
+      width: 636px;
+      margin: 0 auto;
+      fieldset{
+        flex-direction: column;
+        legend{
+          font-size: $font-m;
+          margin-bottom: 24px;
+        }
+        input{
+          padding: 8px;
+          margin-bottom: 16px;
+          background: none;
+          border: solid 1px #000;
+        }
+        textarea{
+          height: 136px;
+          background: none;
+          padding: 8px;
+
+        }
+      }
+      .checkbox{
+        margin: 16px 0 48px;
+      }
+      .btn{
+        text-align: center;
+        button{
+          width: 65%;
+          padding: 20px;
+          color: #fff;
+          background: $primary;
+          border: none;
+          cursor: pointer;
+          margin: 0 auto;
+        }
+        button:hover{
+          background: $secondary;
+        } 
+
+      }
+    }
+  }
 }
