--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,34 @@
-<footer class="footer">我是 footer</footer>
+<footer>
+    <div class="container">
+        <div class="footerbar d-flex">
+            <div>
+                <ul class="footer-nav d-flex">
+                    <li><a href="#">首頁</a></li>
+                    <li><a href="#">系列鏡框</a></li>
+                    <li><a href="#">門市據點</a></li>
+                    <li><a href="#">部落格</a></li>
+                    <li><a href="#">常見問題</a></li>
+                </ul>
+                <ul class="footer-info">
+                    <li class="phone"><span class="material-symbols-outlined">call</span>0800-000-000</li>
+                    <li class="mail"><span class="material-symbols-outlined">
+                        mail
+                        </span>glasses@business.com</li>
+                </ul>                
+            </div>            
+                <ul class="d-flex">
+                    <li><a href="#"><img src="../assets/images/ic-social-fb.png" alt="fb"></a></li>
+                    <li><a href="#"><img src="../assets/images/ic_social_ig.png" alt="ig"></a></li>
+                    <li><a href="#"><img src="../assets/images/ic_social_line.png" alt=""></a></li>
+                </ul>
+            
+        </div>
+        <div class="copyright d-flex">
+            <p>Copyright © 2020 Glasses.All rights reserved.</p>
+            <ul class=" copyright-nav d-flex">
+                <li><a href="">隱私權政策</a></li>
+                <li><a href="">服務條款</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
