--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,8 +1,8 @@
 <footer>
     <div class="container">
         <div class="footerbar d-flex">
-            <div>
-                <ul class="footer-nav d-flex">
+            <div class="footer-nav">
+                <ul class="footer-nav-bar d-flex">
                     <li><a href="#">首頁</a></li>
                     <li><a href="#">系列鏡框</a></li>
                     <li><a href="#">門市據點</a></li>
@@ -19,7 +19,7 @@
                 <ul class="d-flex">
                     <li><a href="#"><img src="../assets/images/ic-social-fb.png" alt="fb"></a></li>
                     <li><a href="#"><img src="../assets/images/ic_social_ig.png" alt="ig"></a></li>
-                    <li><a href="#"><img src="../assets/images/ic_social_line.png" alt=""></a></li>
+                    <li><a href="#"><img src="../assets/images/ic_social_line.png" alt="line"></a></li>
                 </ul>
             
         </div>
