--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container">
+    <div class="container-md">
         <div class="footerbar d-flex">
             <div class="footer-nav">
                 <ul class="footer-nav-bar d-flex">
@@ -10,13 +10,13 @@
                     <li><a href="#">常見問題</a></li>
                 </ul>
                 <ul class="footer-info">
-                    <li class="phone"><span class="material-symbols-outlined">call</span>0800-000-000</li>
-                    <li class="mail"><span class="material-symbols-outlined">
+                    <li class="phone"><a href="#"><span class="material-symbols-outlined">call</span>0800-000-000</a></li>
+                    <li class="mail"><a href="#"><span class="material-symbols-outlined">
                         mail
-                        </span>glasses@business.com</li>
+                        </span>glasses@business.com</li></a>
                 </ul>                
             </div>            
-                <ul class="d-flex">
+                <ul class="Community d-flex">
                     <li><a href="#"><img src="../assets/images/ic-social-fb.png" alt="fb"></a></li>
                     <li><a href="#"><img src="../assets/images/ic_social_ig.png" alt="ig"></a></li>
                     <li><a href="#"><img src="../assets/images/ic_social_line.png" alt="line"></a></li>
