--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,19 +1,11 @@
 <nav>
-    <div class="container navbar d-flex">
+    <div class="container-sm navbar d-flex">
       <h1><a href="#"><img src="../assets/images/logo-white.png" alt="logo"></a></h1>
       <ul class="d-flex">
         <li><a href="#">系列鏡框</a></li>
         <li><a href="#">門市據點</a></li>
         <li><a href="#">部落格</a></li>
         <li><a href="#">常見問題</a></li>
-      </ul>
-    </div>
-    <div class="nav-sm">
-      <ul class="d-flex">
-        <div class="col-md-6 card"><li><a href="#">系列鏡框</a></li></div>
-        <div class="col-md-6 card"><li><a href="#">門市據點</a></li></div>
-        <div class="col-md-6 card"><li><a href="#">部落格</a></li></div>
-        <div class="col-md-6 card"><li><a href="#">常見問題</a></li></div>
       </ul>
     </div>
 </nav>
