--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container-md">
+    <div class="container-ft">
         <div class="footerbar d-flex">
             <div class="footer-nav">
                 <ul class="footer-nav-bar d-flex">
