--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC:wght@200..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Noto+Serif+TC:wght@200..900&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0');
 @import './utils/variable.scss';
 @import './utils/mixins.scss';
 @import './base/reset.scss';
 @import './base/base.scss';
 
+
 @import './layout/header.scss';
 @import './layout/footer.scss';
+@import './layout/grid.scss';
 
 
 @import './pages/index.scss';
+@import './pages/store.scss';
+@import './pages/products.scss';
+
