--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,9 +1,9 @@
 <nav>
-    <div class="container-sm navbar d-flex">
-      <h1><a href="#"><img src="../assets/images/logo-white.png" alt="logo"></a></h1>
+    <div class="container-hd navbar d-flex">
+      <h1><a href="./index.html"><img src="../assets/images/logo-white.png" alt="logo"></a></h1>
       <ul class="d-flex">
-        <li><a href="#">系列鏡框</a></li>
-        <li><a href="#">門市據點</a></li>
+        <li><a href="./products.html">系列鏡框</a></li>
+        <li><a href="./store.html">門市據點</a></li>
         <li><a href="#">部落格</a></li>
         <li><a href="#">常見問題</a></li>
       </ul>
